--- a/terraform/helm/fullnode/templates/backup.yaml
+++ b/terraform/helm/fullnode/templates/backup.yaml
@@ -63,8 +63,12 @@ spec:
         - name: STRUCT_LOG_TCP_ADDR
           value: {{ include "backup.loggingAddress" $ | quote }}
         {{- if (include "backup.pushMetricsEndpoint" $) }}
+        - name: KUBERNETES_POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
         - name: PUSH_METRICS_ENDPOINT
-          value: "{{- include "backup.pushMetricsEndpoint" $ }}/api/v1/import/prometheus?extra_label=role={{- .jobName | default "db_backup" }}&extra_label=kubernetes_pod_name={{ include "backup.fullname" . }}-db-backup"
+          value: "{{- include "backup.pushMetricsEndpoint" $ }}/api/v1/import/prometheus?extra_label=role={{- .jobName | default "db_backup" }}&extra_label=kubernetes_pod_name=$(KUBERNETES_POD_NAME)"
         {{- end }}
         {{- include "backup.backupEnvironment" (dict "config" .config "era" $.Values.chain.era) | nindent 8 }}
         volumeMounts:
