--- a/terraform/helm/fullnode/templates/restore.yaml
+++ b/terraform/helm/fullnode/templates/restore.yaml
@@ -44,8 +44,12 @@ spec:
         - name: STRUCT_LOG_TCP_ADDR
           value: {{ include "backup.loggingAddress" $ | quote }}
         {{- if (include "backup.pushMetricsEndpoint" $) }}
+        - name: KUBERNETES_POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
         - name: PUSH_METRICS_ENDPOINT
-          value: "{{- include "backup.pushMetricsEndpoint" $ }}/api/v1/import/prometheus?extra_label=role={{- .jobName | default "db_restore" }}&extra_label=kubernetes_pod_name={{ include "backup.fullname" . }}-db-restore"
+          value: "{{- include "backup.pushMetricsEndpoint" $ }}/api/v1/import/prometheus?extra_label=role={{- .jobName | default "db_restore" }}&extra_label=kubernetes_pod_name=$(KUBERNETES_POD_NAME)"
         {{- end }}
         - name: CONTROLLER_UID
           valueFrom:
