[move-prover] Refactor prover integration (#5208)
This PR creates a new `prover` module (in framework) which lives side-by-side with the `docgen` module and serves as a single point of integration of the prover into the aptos stack. This comes with is own clap-ified set of options which are hand-selected from the many (some obsolete) options the core prover has in the move repo and which are now available via the CLI.

```
USAGE:
    aptos move prove [OPTIONS]

OPTIONS:
        --check-inconsistency
            Whether to check consistency of specs by injecting impossible assertions

        --cvc5
            Whether to use cvc5 as the smt solver backend. The environment variable `CVC5_EXE`
            should point to the binary

        --dump
            Whether to dump intermediate step results to files

        --keep-loops
            Whether to keep loops as they are and pass them on to the underlying solver

        --loop-unroll <LOOP_UNROLL>
            Number of iterations to unroll loops

        --named-addresses <NAMED_ADDRESSES>
            Named addresses for the move binary [default: ]

        --proc-cores <PROC_CORES>
            The number of cores to use for parallel processing of verification conditions [default:
            4]

        --random-seed <RANDOM_SEED>
            A seed for the prover [default: 0]

        --stable-test-output
            Whether output for e.g. diagnosis shall be stable/redacted so it can be used in test
            output

        --stratification-depth <STRATIFICATION_DEPTH>
            The depth until which stratified functions are expanded [default: 6]

    -t, --trace
            Whether to display additional information in error reports. This may help debugging but
            also can make verification slower

    -v, --verbosity <VERBOSITY>
            Verbosity level

        --vc-timeout <VC_TIMEOUT>
            A (soft) timeout for the solver, per verifica

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -169,6 +169,7 @@ move-model = { git = "https://github.com/move-language/move", rev = "b7f8071c836
 move-package = { git = "https://github.com/move-language/move", rev = "b7f8071c8368a493becedfc5cd0e8e6bacbf3d56" }
 move-prover = { git = "https://github.com/move-language/move", rev = "b7f8071c8368a493becedfc5cd0e8e6bacbf3d56" }
 move-prover-boogie-backend = { git = "https://github.com/move-language/move", rev = "b7f8071c8368a493becedfc5cd0e8e6bacbf3d56" }
+move-stackless-bytecode = { git = "https://github.com/move-language/move", rev = "b7f8071c8368a493becedfc5cd0e8e6bacbf3d56" }
 move-prover-test-utils = { git = "https://github.com/move-language/move", rev = "b7f8071c8368a493becedfc5cd0e8e6bacbf3d56" }
 move-resource-viewer = { git = "https://github.com/move-language/move", rev = "b7f8071c8368a493becedfc5cd0e8e6bacbf3d56" }
 move-stackless-bytecode-interpreter = { git = "https://github.com/move-language/move", rev = "b7f8071c8368a493becedfc5cd0e8e6bacbf3d56" }
