--- a/aptos-move/framework/Cargo.toml
+++ b/aptos-move/framework/Cargo.toml
@@ -50,6 +50,9 @@ move-core-types ={ workspace = true }
 move-docgen ={ workspace = true }
 move-model ={ workspace = true }
 move-package ={ workspace = true }
+move-prover ={ workspace = true }
+move-prover-boogie-backend ={ workspace = true }
+move-stackless-bytecode ={ workspace = true }
 move-table-extension ={ workspace = true }
 move-vm-runtime ={ workspace = true }
 move-vm-types ={ workspace = true }
