--- a/terraform/helm/fullnode/values.yaml
+++ b/terraform/helm/fullnode/values.yaml
@@ -136,11 +136,11 @@ backup_verify:
   schedule: "@daily"
   resources:
     limits:
-      cpu: 0.5
-      memory: 512Mi
+      cpu: 4
+      memory: 4Gi
     requests:
-      cpu: 0.5
-      memory: 512Mi
+      cpu: 4
+      memory: 4Gi
   nodeSelector: {}
   tolerations: []
   affinity: {}
