--- a/Cargo.toml
+++ b/Cargo.toml
@@ -190,6 +190,8 @@ read-write-set-dynamic = { git = "https://github.com/move-language/move", rev = 
 debug = true
 overflow-checks = true
 
+# The performance build is not currently recommended
+# for production deployments. It has not been widely tested.
 [profile.performance]
 inherits = "release"
 opt-level = 3
