--- a/crates/aptos/Cargo.toml
+++ b/crates/aptos/Cargo.toml
@@ -21,7 +21,6 @@ dirs = "4.0.0"
 futures = "0.3.21"
 hex = "0.4.3"
 itertools = "0.10.3"
-jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
 rand = "0.7.3"
 regex = "1.1.5"
 reqwest = { version = "0.11.10", features = ["blocking", "json"] }
@@ -74,6 +73,9 @@ move-unit-test = { workspace = true }
 move-vm-runtime = { workspace = true, features = [ "testing" ] }
 
 storage-interface = { path = "../../storage/storage-interface" }
+
+[target.'cfg(unix)'.dependencies]
+jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
 
 [features]
 default = []
