--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -43,13 +43,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.14.2
       # install packages for examples
-      - run: cd ./ecosystem/typescript/sdk/examples/typescript && yarn install
-      - run: cd ./ecosystem/typescript/sdk/examples/javascript && yarn install
+      - run: cd ./ecosystem/typescript/sdk/examples/typescript && pnpm install
+      - run: cd ./ecosystem/typescript/sdk/examples/javascript && pnpm install
       # Run package build+lint + tests
-      - run: cd ./ecosystem/typescript/sdk && yarn install
-      - run: cd ./ecosystem/typescript/sdk && yarn lint
-      - run: cd ./ecosystem/typescript/sdk && yarn fmt:check
+      - run: cd ./ecosystem/typescript/sdk && pnpm install
+      - run: cd ./ecosystem/typescript/sdk && pnpm lint
+      - run: cd ./ecosystem/typescript/sdk && pnpm fmt:check
 
   docs-lint:
     runs-on: ubuntu-latest
@@ -58,7 +61,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
-      - run: yarn lint
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.14.2
+      - run: pnpm lint
         working-directory: developer-docs-site
 
   rust-cryptohasher-domain-separation-check:
