--- a/developer-docs-site/package.json
+++ b/developer-docs-site/package.json
@@ -14,18 +14,23 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
     "fmt": "prettier --write '**/*.(tsx|ts|js)'",
-    "lint": "yarn install --frozen-lockfile --silent && prettier --check '**/*.(tsx|ts|js)'"
+    "lint": "pnpm install --frozen-lockfile --silent && prettier --check '**/*.(tsx|ts|js)'"
   },
   "dependencies": {
+    "@algolia/client-search": "^4.14.2",
     "@docusaurus/core": "2.1.0",
     "@docusaurus/plugin-client-redirects": "2.1.0",
     "@docusaurus/plugin-google-analytics": "2.1.0",
     "@docusaurus/plugin-google-gtag": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
+    "@docusaurus/theme-classic": "^2.2.0",
     "@mdx-js/react": "1.6.22",
+    "@types/prop-types": "^15.7.5",
+    "@types/react": "^18.0.25",
     "clsx": "1.2.1",
     "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "1.2.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rehype-katex": "5",
@@ -36,6 +41,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0",
     "@tsconfig/docusaurus": "1.0.6",
+    "@types/node": "^18.11.9",
     "prettier": "2.7.1",
     "typescript": "4.8.2"
   },
