--- a/developer-docs-site/package.json
+++ b/developer-docs-site/package.json
@@ -24,26 +24,35 @@
     "@docusaurus/plugin-google-gtag": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@docusaurus/theme-classic": "^2.2.0",
+    "@docusaurus/types": "^2.2.0",
     "@mdx-js/react": "1.6.22",
+    "@stoplight/elements": "^7.7.3",
     "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.25",
+    "buffer": "^6.0.3",
     "clsx": "1.2.1",
     "hast-util-is-element": "1.1.0",
+    "mkdirp": "^1.0.4",
+    "path-to-regex": "^1.3.8",
     "prism-react-renderer": "1.2.1",
+    "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rehype-katex": "5",
     "remark-math": "3",
+    "stream": "^0.0.2",
     "unist-util-visit": "4.1.0",
-    "unist-util-visit-children": "2.0.0"
+    "unist-util-visit-children": "2.0.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0",
     "@tsconfig/docusaurus": "1.0.6",
     "@types/node": "^18.11.9",
     "prettier": "2.7.1",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "webpack": "^5.74.0"
   },
   "browserslist": {
     "production": [
