--- a/ecosystem/python/sdk/pyproject.toml
+++ b/ecosystem/python/sdk/pyproject.toml
@@ -16,11 +16,16 @@ rust-version = { workspace = true }
 python = ">=3.7,<4.0"
 httpx = "^0.23.0"
 PyNaCl = "^1.5.0"
+mypy = "^0.982"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
-autoflake = "^1.4"
 isort = "^5.10.1"
+autoflake = "1.4.0"
+mypy = "^0.982"
+flake8 = ">=3.8.3,<6.0.0"
+mypy-extensions = "^0.4.3"
+typing-extensions = "^4.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
