--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,6 +7,7 @@
 /api/ @banool @gregnazario
 
 # Owners for the `/aptos-move` directory and its subdirectories:`aptos-gas`, `aptos-vm`, `framework` and `framework/aptos-stdlib/sources/cryptography`.
+/aptos-move/aptos-aggregator/ @georgemitenkov @gelash @zekun000
 /aptos-move/aptos-gas/ @vgao1996
 /aptos-move/aptos-vm/ @davidiw @wrwg @zekun000
 /aptos-move/e2e-tests/src/account.rs @alinush
@@ -19,6 +20,7 @@
 # Owner for aptos-token, cryptography natives, parallel-executor and vm-genesis.
 /aptos-move/framework/aptos-token @areshand
 /aptos-move/framework/src/natives/cryptography/ @alinush
+/aptos-move/framework/src/natives/aggregator_natives/ @georgemitenkov @gelash @zekun000
 /aptos-move/parallel-executor/ @gelash @zekun000
 /aptos-move/vm-genesis/ @davidiw @movekevin
 
