--- a/crates/indexer/Cargo.toml
+++ b/crates/indexer/Cargo.toml
@@ -19,6 +19,7 @@ aptos-api-types = { path = "../../api/types" }
 aptos-bitvec = { path = "../aptos-bitvec" }
 aptos-config = { path = "../../config" }
 async-trait = "0.1.53"
+bcs = "0.1.3"
 bigdecimal = { version = "0.3.0", features = ["serde"] }
 chrono = { version = "0.4.19", default-features = false, features = [
   "clock",
