--- a/testsuite/smoke-test/Cargo.toml
+++ b/testsuite/smoke-test/Cargo.toml
@@ -38,6 +38,7 @@ aptos-gas = { path = "../../aptos-move/aptos-gas", features = ["testing"] }
 aptos-global-constants = { path = "../../config/global-constants", features = ["testing"] }
 aptos-indexer = { path = "../../crates/indexer" }
 aptos-keygen = { path = "../../crates/aptos-keygen" }
+aptos-release-builder = { path = "../../aptos-move/aptos-release-builder" }
 aptos-rest-client = { path = "../../crates/aptos-rest-client" }
 aptos-rosetta = { path = "../../crates/aptos-rosetta" }
 aptos-sdk = { path = "../../sdk" }
