--- a/.github/workflows/close-stale-issues.yaml
+++ b/.github/workflows/close-stale-issues.yaml
@@ -2,6 +2,7 @@ name: "Close stale issues and PRs"
 on:
   schedule:
     - cron: "30 1 * * *"
+  workflow_dispatch:
 
 permissions:
   # contents: write # only for delete-branch option
