--- a/state-sync/inter-component/event-notifications/Cargo.toml
+++ b/state-sync/inter-component/event-notifications/Cargo.toml
@@ -13,28 +13,25 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-async-trait = "0.1.53"
-futures = "0.3.21"
-serde = { version = "1.0.137", default-features = false }
-thiserror = "1.0.31"
-
-aptos-id-generator = { path = "../../../crates/aptos-id-generator" }
-aptos-infallible = { path = "../../../crates/aptos-infallible" }
-aptos-state-view = { path = "../../../storage/state-view" }
-aptos-types = { path = "../../../types" }
-
-channel = { path = "../../../crates/channel" }
-storage-interface = { path = "../../../storage/storage-interface" }
+aptos-id-generator = { workspace = true }
+aptos-infallible = { workspace = true }
+aptos-state-view = { workspace = true }
+aptos-types = { workspace = true }
+async-trait = { workspace = true }
+channel = { workspace = true }
+futures = { workspace = true }
+serde = { workspace = true }
+storage-interface = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
-bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
-claims = "0.7"
-
-aptos-crypto = { path = "../../../crates/aptos-crypto" }
-aptos-temppath = { path = "../../../crates/aptos-temppath" }
-aptos-vm = { path = "../../../aptos-move/aptos-vm" }
-aptosdb = { path = "../../../storage/aptosdb" }
-executor-test-helpers = { path = "../../../execution/executor-test-helpers" }
+aptos-crypto = { workspace = true }
+aptos-temppath = { workspace = true }
+aptos-vm = { workspace = true }
+aptosdb = { workspace = true }
+bcs = { workspace = true }
+claims = { workspace = true }
+executor-test-helpers = { workspace = true }
 move-binary-format = { workspace = true }
 move-core-types = { workspace = true }
-vm-genesis = { path = "../../../aptos-move/vm-genesis", features = ["fuzzing"] }
+vm-genesis = { workspace = true }
