--- a/state-sync/state-sync-v2/state-sync-driver/Cargo.toml
+++ b/state-sync/state-sync-v2/state-sync-driver/Cargo.toml
@@ -13,52 +13,49 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-anyhow = "1.0.52"
-async-trait = "0.1.53"
-bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
-futures = "0.3.21"
-once_cell = "1.10.0"
-serde = { version = "1.0.137", default-features = false }
-thiserror = "1.0.31"
-tokio = { version = "1.21.0", features = ["full"] }
-tokio-stream = "0.1.8"
-
-aptos-config = { path = "../../../config" }
-aptos-crypto = { path = "../../../crates/aptos-crypto" }
-aptos-data-client = { path = "../../aptos-data-client" }
-aptos-infallible = { path = "../../../crates/aptos-infallible" }
-aptos-logger = { path = "../../../crates/aptos-logger" }
-aptos-metrics-core = { path = "../../../crates/aptos-metrics-core" }
-aptos-types = { path = "../../../types" }
-
-consensus-notifications = { path = "../../inter-component/consensus-notifications" }
-data-streaming-service = { path = "../data-streaming-service" }
-event-notifications = { path = "../../inter-component/event-notifications" }
-executor-types = { path = "../../../execution/executor-types" }
-mempool-notifications = { path = "../../inter-component/mempool-notifications" }
-schemadb = { path = "../../../storage/schemadb" }
-scratchpad = { path = "../../../storage/scratchpad" }
-storage-interface = { path = "../../../storage/storage-interface" }
+anyhow = { workspace = true }
+aptos-config = { workspace = true }
+aptos-crypto = { workspace = true }
+aptos-data-client = { workspace = true }
+aptos-infallible = { workspace = true }
+aptos-logger = { workspace = true }
+aptos-metrics-core = { workspace = true }
+aptos-types = { workspace = true }
+async-trait = { workspace = true }
+bcs = { workspace = true }
+consensus-notifications = { workspace = true }
+data-streaming-service = { workspace = true }
+event-notifications = { workspace = true }
+executor-types = { workspace = true }
+futures = { workspace = true }
+mempool-notifications = { workspace = true }
+once_cell = { workspace = true }
+schemadb = { workspace = true }
+scratchpad = { workspace = true }
+serde = { workspace = true }
+storage-interface = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+tokio-stream = { workspace = true }
 
 [dev-dependencies]
-anyhow = "1.0.57"
-async-trait = "0.1.53"
-bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
-claims = "0.7"
-mockall = "0.11.0"
-rand = "0.7.3"
-
-aptos-crypto = { path = "../../../crates/aptos-crypto" }
-aptos-genesis = { path = "../../../crates/aptos-genesis", features = ["testing"] }
-aptos-temppath = { path = "../../../crates/aptos-temppath" }
-aptos-time-service = { path = "../../../crates/aptos-time-service", features = ["async", "testing"] }
-aptos-vm = { path = "../../../aptos-move/aptos-vm" }
-aptosdb = { path = "../../../storage/aptosdb" }
-channel = { path = "../../../crates/channel" }
-executor = { path = "../../../execution/executor" }
-executor-test-helpers = { path = "../../../execution/executor-test-helpers" }
+anyhow = { workspace = true }
+aptos-crypto = { workspace = true }
+aptos-genesis = { workspace = true }
+aptos-temppath = { workspace = true }
+aptos-time-service = { workspace = true, features = ["async", "testing"] }
+aptos-vm = { workspace = true }
+aptosdb = { workspace = true }
+async-trait = { workspace = true }
+bcs = { workspace = true }
+channel = { workspace = true }
+claims = { workspace = true }
+executor = { workspace = true }
+executor-test-helpers = { workspace = true }
+mockall = { workspace = true }
 move-core-types = { workspace = true }
-network = { path = "../../../network", features = ["fuzzing"] }
-storage-service-client = { path = "../../storage-service/client" }
-storage-service-types = { path = "../../storage-service/types" }
-vm-genesis = { path = "../../../aptos-move/vm-genesis", features = ["fuzzing"] }
+network = { workspace = true }
+rand = { workspace = true }
+storage-service-client = { workspace = true }
+storage-service-types = { workspace = true }
+vm-genesis = { workspace = true }
