--- a/state-sync/storage-service/client/Cargo.toml
+++ b/state-sync/storage-service/client/Cargo.toml
@@ -13,12 +13,10 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-async-trait = "0.1.53"
-thiserror = "1.0.31"
-
-aptos-config = { path = "../../../config" }
-aptos-types = { path = "../../../types" }
-
-channel = { path = "../../../crates/channel" }
-network = { path = "../../../network" }
-storage-service-types = { path = "../types" }
+aptos-config = { workspace = true }
+aptos-types = { workspace = true }
+async-trait = { workspace = true }
+channel = { workspace = true }
+network = { workspace = true }
+storage-service-types = { workspace = true }
+thiserror = { workspace = true }
