--- a/state-sync/storage-service/server/Cargo.toml
+++ b/state-sync/storage-service/server/Cargo.toml
@@ -13,36 +13,33 @@ repository = { workspace = true }
 rust-version = { workspace = true }
 
 [dependencies]
-bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
-bytes = "1.1.0"
-futures = "0.3.21"
-lru = "0.7.5"
-once_cell = "1.10.0"
-serde = { version = "1.0.137", default-features = false }
-thiserror = "1.0.31"
-tokio = { version = "1.21.0", features = ["rt", "macros"], default-features = false }
-
-aptos-config = { path = "../../../config" }
-aptos-infallible = { path = "../../../crates/aptos-infallible" }
-aptos-logger = { path = "../../../crates/aptos-logger" }
-aptos-metrics-core = { path = "../../../crates/aptos-metrics-core" }
-aptos-time-service = { path = "../../../crates/aptos-time-service", features = ["async"] }
-aptos-types = { path = "../../../types" }
-
-bounded-executor = { path = "../../../crates/bounded-executor" }
-channel = { path = "../../../crates/channel" }
-network = { path = "../../../network" }
-storage-interface = { path = "../../../storage/storage-interface" }
-storage-service-types = { path = "../types" }
+aptos-config = { workspace = true }
+aptos-infallible = { workspace = true }
+aptos-logger = { workspace = true }
+aptos-metrics-core = { workspace = true }
+aptos-time-service = { workspace = true }
+aptos-types = { workspace = true }
+bcs = { workspace = true }
+bounded-executor = { workspace = true }
+bytes = { workspace = true }
+channel = { workspace = true }
+futures = { workspace = true }
+lru = { workspace = true }
+network = { workspace = true }
+once_cell = { workspace = true }
+serde = { workspace = true }
+storage-interface = { workspace = true }
+storage-service-types = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true }
 
 [dev-dependencies]
-anyhow = "1.0.57"
-claims = "0.7"
-mockall = "0.11.0"
-rand = "0.7.3"
-
-aptos-bitvec = { path = "../../../crates/aptos-bitvec" }
-aptos-crypto = { path = "../../../crates/aptos-crypto" }
-aptos-time-service = { path = "../../../crates/aptos-time-service", features = ["async", "testing"] }
-aptos-types = { path = "../../../types" }
-storage-interface = { path = "../../../storage/storage-interface" }
+anyhow = { workspace = true }
+aptos-bitvec = { workspace = true }
+aptos-crypto = { workspace = true }
+aptos-time-service = { workspace = true, features = ["async", "testing"] }
+aptos-types = { workspace = true }
+claims = { workspace = true }
+mockall = { workspace = true }
+rand = { workspace = true }
+storage-interface = { workspace = true }
