--- a/.github/workflows/continuous-e2e-state-sync-failures-catching-up-test.yaml
+++ b/.github/workflows/continuous-e2e-state-sync-failures-catching-up-test.yaml
@@ -10,14 +10,13 @@ on:
     - cron: "0 */3 * * *"
 
 jobs:
-  ### Please remember to use different namespace for different tests
-  run-state-sync-failures-catching-up-test:
+  run-forge-state-sync-failures-catching-up-test:
     uses: ./.github/workflows/run-forge.yaml
     secrets: inherit
     with:
       FORGE_NAMESPACE: forge-state-sync-failures-catching-up-test
       FORGE_CLUSTER_NAME: aptos-forge-big-1
       FORGE_RUNNER_DURATION_SECS: 900
-      FORGE_TEST_SUITE: failures_catching_up
+      FORGE_TEST_SUITE: state_sync_failures_catching_up
       POST_TO_SLACK: true
       FORGE_ENABLE_FAILPOINTS: true
