--- a/Cargo.toml
+++ b/Cargo.toml
@@ -223,7 +223,8 @@ thiserror = "1.0.31"
 tokio = { version = "1.21.0", features = ["full"] }
 tokio-stream = "0.1.8"
 
-# External Move dependencies
+# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
+# BEGIN MOVE DEPENDENCIES
 move-abigen = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
 move-binary-format = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
 move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
@@ -252,6 +253,7 @@ move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "f71
 move-vm-types = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
 read-write-set = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
 read-write-set-dynamic = { git = "https://github.com/move-language/move", rev = "f7137eabc2046f76fdad3ded2c51e03a3b1fbd01" }
+# END MOVE DEPENDENCIES
 
 [profile.release]
 debug = true
